# Alma-Digital-Upload

./: .gitignore  alma_digital_upload.py  pyproject.toml
config/: .gitkeep  config.example.json
docs/: FILENAME_WORKFLOW.md  FOLDER_PATH_WORKFLOW.md  LGBTQ_WORKFLOW.md  RARE_BOOKS_WORKFLOW.md  README.md
historical_logs/2025-07/: alma_lgtbq_files_config_27_07_25.json  alma_lgtbq_files_config_28_07_25_resuming.json
scripts/: smoke_project.py
strategies/: __init__.py  base.py  marc_907e_strategy.py  mms_id_filename_strategy.py
tests/: __init__.py  test_imports.py  test_strategies.py
utils/: __init__.py  folder_matching.py  folder_renaming.py  marc_extraction.py  resume_helper.py
